<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/xxxlarge_padding"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bkg_tutorial_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:layout_marginStart="@dimen/medium_margin"
        app:layout_constraintStart_toStartOf="@id/container_title_view"
        app:layout_constraintBottom_toBottomOf="@id/container_title_view"
        app:layout_constraintTop_toTopOf="@id/container_title_view"
        android:text="@string/insert_activity_label"/>

    <View
        android:id="@+id/container_title_view"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/tutorial_background_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/bkg_title_container"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/insert_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginStart="@dimen/medium_margin"
        android:src="@drawable/insert_icon"
        app:layout_constraintTop_toBottomOf="@id/container_title_view"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/type_label_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Tipo"
        android:layout_marginStart="@dimen/xxxlarge_margin"
        app:layout_constraintStart_toEndOf="@id/insert_imageview"
        app:layout_constraintTop_toTopOf="@id/insert_imageview"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/type_menu_textinputlayout"
        android:layout_width="0dp"
        android:layout_height="@dimen/dropdown_menu_height"
        android:hint="@string/type_menu_hint_label"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/xxxlarge_margin"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/type_label_textview"
        app:layout_constraintTop_toBottomOf="@id/type_label_textview">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/activity_started_textview"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Sei A Lavoro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/type_label_textview"
        app:layout_constraintTop_toBottomOf="@id/type_label_textview"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/timer_btn_start"
        style="@style/ContainerButton"
        android:layout_width="@dimen/timer_btn_width"
        android:layout_height="@dimen/timer_btn_height"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/start_activity_label"
        app:layout_constraintEnd_toEndOf="@id/type_menu_textinputlayout"
        app:layout_constraintStart_toStartOf="@id/type_menu_textinputlayout"
        app:layout_constraintTop_toBottomOf="@id/type_menu_textinputlayout"/>


</androidx.constraintlayout.widget.ConstraintLayout>